# databricks-dab-enterprise-template-cdx

./: .databrickscfg.example  Makefile  README.md  README_ENTERPRISE.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: databricks-analyst.md  databricks-engineer.md
.claude/commands/: analyze.md  lakehouse.md  observability.md
.github/: CODEOWNERS  pull_request_template.md  repo-settings.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-test.yml  pr-validate.yml  reusable-deploy.yml
agents/: cost-analyst.md  data-lake-architect.md
config/: dev.yml  prod.yml  test.yml
docs/: BOOTSTRAP_CHECKLIST.md  architecture.md  branching-and-release.md  branching.md  cicd.md  onboarding.md  operations-runbook.md  operations.md
notebooks/dlt/: pipeline.sql
notebooks/etl/: 01_create_table.py  02_insert_data.py  03_quality_check.py
resources/compute/: cluster_templates.yml
resources/dashboards/: dashboard.lvdash.json  dashboard.yml
resources/jobs/: job_etl.yml  job_reporting.yml
resources/permissions/: permissions.yml
resources/pipelines/: dlt_pipeline.yml
skills/agent-teams/: SKILL.md
skills/databricks-dashboards/: SKILL.md
skills/databricks-dashboards/reference/: examples.md  widget-reference.md
skills/karpathy-guidelines/: README.md
skills/python-data-engineering/: SKILL.md
skills/python-data-engineering/resources/: pyspark-patterns.md
src/platform_core/: __init__.py  config.py  dummy_data.py  validation.py
tests/: test_config.py  test_dummy_data.py  test_utils.py  test_validation.py
